test_case/rust-lang_rust/49558_377870141_34.rs
compile_fail,E0692\n#![feature(repr_transparent)]\n\n#[repr(transparent, C)] // error: incompatible representation hints\nstruct Grams(f32);\n